Updated Paginated Validator and Docs